testOOPProject/src/oop/sample/SubClass.java
package oop.sample;

// 상속 테스트
//public class SubClass extends PublicClass {
//public class SubClass extends FinalClass { // error
	public class SubClass extends AbstractClass {

}
